Fix unit test executing. Fix RS pins in DC trigger.