@@ -100,6 +100,9 @@ configure(subprojects) { subproject ->
 
     }
     tasks.named("jar") {
+        doFirst {
+            delete fileTree(dir: layout.buildDirectory.dir("classes/java/main"), include: '**/*.java')
+        }
         destinationDirectory = file("$rootDir/distro/schemaParts")
         from(sourceSets.main.allSource) {
             include '**/*.java'  // Filter to include only Java files
@@ -112,10 +115,17 @@ configure(subprojects) { subproject ->
             events "passed", "skipped", "failed"
         }
         doFirst {
+            delete fileTree(dir: layout.buildDirectory.dir("classes/java/main"), include: '**/*.java')
+            copy {
+                from 'src/java'
+                into layout.buildDirectory.dir("classes/java/main")
+                duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+            }
             jvmArgs += [
                     '--module-path', classpath.asPath,
                     '--add-modules', 'KiCadLogicalSchemeSimulator.simulator',
                     '--add-exports', 'KiCadLogicalSchemeSimulator.simulator/pko.KiCadLogicalSchemeSimulator.parsers.net=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.lang=KiCadLogicalSchemeSimulator.simulator'
             ]
         }
     }
